@@ -1,3 +1,8 @@
+2013-02-18  Carsten Haitzler (The Rasterman)
+
+        * Fix edje edje_color_class_list() and edje_text_class_list() to
+        look at the correct hashes when returning.
+
 2013-02-17  Mike Blumenkrantz
 
         * fix anchor clicked mouse signals for selection-enabled entries
